<resources>
    <string name="app_name">Little Chef</string>
    <string name="facebook_app_id">2780472732253927</string>
    <string name="fb_login_protocol_scheme">fb2780472732253927</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu_drawer_open">Drawer Open</string>
    <string name="menu_drawer_close">Drawer Close</string>

    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="search">Search your notes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="currencies">
        <item>cup</item>
        <item>teaspoon</item>
        <item>tablespoon</item>
        <item>gram</item>
        <item>ml</item>
        <item>oz</item>
    </string-array>
    <string-array name="currencies2">
        <item>oz</item>
        <item>cup</item>
        <item>teaspoon</item>
        <item>tablespoon</item>
        <item>gram</item>
        <item>ml</item>
    </string-array>

    <string-array name="filter">
        <item>All</item>
        <item>Dessert</item>
        <item>Chicken</item>
        <item>Pork</item>
        <item>Seafood</item>
        <item>Soup</item>
        <item>Pasta</item>
    </string-array>
</resources>